--- a/_config.yml
+++ b/_config.yml
@@ -104,4 +104,6 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: 'git'
+  repo: https://github.com/pierre0210/pierre0210.github.io
+  branch: master
