--- a/_config.next.yml
+++ b/_config.next.yml
@@ -553,7 +553,7 @@ math:
   every_page: false
 
   mathjax:
-    enable: false
+    enable: true
     # Available values: none | ams | all
     tags: none
 
