--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Pierre的踩坑筆記
+title: TRY & ERR
 subtitle: 'Web development / CTF'
 description: '(╯°Д°)╯ ┻━┻'
 keywords:
@@ -43,11 +43,12 @@ render_drafts: false
 post_asset_folder: true
 relative_link: false
 future: true
+syntax_highlighter: highlight.js
 highlight:
   enable: true
   line_number: true
-  auto_detect: true
-  tab_replace: ''
+  auto_detect: false
+  tab_replace: ""
   wrap: true
   hljs: false
 prismjs:
@@ -97,7 +98,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: next
+theme: dashed
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
