--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "7.2.0"
+    "version": "7.3.0"
   },
   "dependencies": {
     "hexo": "^7.3.0",
-    "hexo-admin": "^2.3.0",
     "hexo-deployer-git": "^4.0.0",
+    "hexo-pagination": "^3.0.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-feed": "^3.0.0",
@@ -23,8 +23,6 @@
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.3.0",
     "hexo-renderer-stylus": "^3.0.1",
-    "hexo-server": "^3.0.0",
-    "hexo-theme-landscape": "^1.0.0",
-    "hexo-theme-next": "^8.20.0"
+    "hexo-server": "^3.0.0"
   }
 }
