--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Try & Err
+title: Pierre's Blog
 subtitle: 'Web development / CTF'
 description: '(╯°Д°)╯ ┻━┻'
 keywords:
